# isis-federated-learning

./: README.md  pyproject.toml
notebooks/: fl-and-data-distribution.ipynb
utils/: tools.py
